--- a/WillowTreeSharp.csproj
+++ b/WillowTreeSharp.csproj
@@ -106,6 +106,12 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Array.cs" />
+    <Compile Include="CharacterManager.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CharacterManager.Designer.cs">
+      <DependentUpon>CharacterManager.cs</DependentUpon>
+    </Compile>
     <Compile Include="CustomControls\BasicTheme.cs" />
     <Compile Include="CustomControls\CCPanel.cs" />
     <Compile Include="CustomControls\ManagedTheme.cs" />
@@ -216,6 +222,9 @@
     <Compile Include="XML.cs" />
     <EmbeddedResource Include="AppThemes.resx">
       <DependentUpon>AppThemes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CharacterManager.resx">
+      <DependentUpon>CharacterManager.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="CustomControls\SlideSelector.resx">
       <DependentUpon>SlideSelector.cs</DependentUpon>
